# TwitchIRC

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
include/: twitchIRC.hpp
include/helper/: config.hpp
lib/: CMakeLists.txt
src/: twitchIRC.cpp
src/helper/: config.cpp
tests/: CMakeLists.txt  mainTests.cpp
tests/testSuites/: test_config.cpp
tests/testSuites/test_configs/: test_clean_config.yaml
